force-app/main/default/objects/SettlementLineItem__c/SettlementLineItem__c.object-meta.xml
<CustomObject>
    <label>Settlement Line Item</label>
    <nameField>
        <displayFormat>SLI-{00000000}</displayFormat>
        <label>SLI No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>