force-app/main/default/objects/SettlementLineItem__c/fields/AccountingFXRate__c.field-meta.xml
<CustomField>
    <fullName>AccountingFXRate__c</fullName>
    <label>Accounting FX Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>