force-app/main/default/objects/SettlementLineItem__c/fields/AccountingStandards__c.field-meta.xml
<CustomField>
    <fullName>AccountingStandards__c</fullName>
    <label>Accounting Standards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GAAP</fullName>
            </value>
            <value>
                <fullName>IFRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>