force-app/main/default/objects/SettlementLineItem__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlement Line Items (Account Name)</relationshipLabel>
    <relationshipName>SettlementLineItems_AccountName</relationshipName>
    <type>Lookup</type>
</CustomField>