force-app/main/default/objects/SettlementLineItem__c/fields/Amount_fm__c.field-meta.xml
<CustomField>
    <fullName>Amount_fm__c</fullName>
    <formula>AMTSettled__c *  FXRateSettlementAccounting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(M) Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>