force-app/main/default/objects/SettlementLineItem__c/fields/AmtAPAR__c.field-meta.xml
<CustomField>
    <fullName>AmtAPAR__c</fullName>
    <description>미결평가액</description>
    <formula>IF(
    ISBLANK(EvaluationDate__c),
    NULL,
    OriginAmount__c * EvaluationFXRate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMT_AP/AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>