force-app/main/default/objects/SettlementLineItem__c/fields/AMTPremium_fm__c.field-meta.xml
<CustomField>
    <fullName>AMTPremium_fm__c</fullName>
    <formula>FXAmountPremiumLocal__c * AccountingFXRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMT_Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>