force-app/main/default/objects/SettlementLineItem__c/fields/AMTSales__c.field-meta.xml
<CustomField>
    <fullName>AMTSales__c</fullName>
    <formula>OriginAmount__c *  AccountingFXRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMT_Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>