force-app/main/default/objects/SettlementLineItem__c/fields/AMTSettled__c.field-meta.xml
<CustomField>
    <fullName>AMTSettled__c</fullName>
    <formula>OriginAmount__c *  FXRateOrigintoSettlement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMT_Settled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>