force-app/main/default/objects/SettlementLineItem__c/fields/ARAPDate__c.field-meta.xml
<CustomField>
    <fullName>ARAPDate__c</fullName>
    <label>(M)AR/AP Date</label>
    <type>Date</type>
</CustomField>