force-app/main/default/objects/SettlementLineItem__c/fields/BalanceaftCleared__c.field-meta.xml
<CustomField>
    <fullName>BalanceaftCleared__c</fullName>
    <description>반제 후 잔액</description>
    <label>Balance aft. Cleared</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>