force-app/main/default/objects/SettlementLineItem__c/fields/BalanceaftClearedKRW__c.field-meta.xml
<CustomField>
    <fullName>BalanceaftClearedKRW__c</fullName>
    <label>Balance aft. Cleared(KRW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>