force-app/main/default/objects/SettlementLineItem__c/fields/BrokerageRatePct_fm__c.field-meta.xml
<CustomField>
    <fullName>BrokerageRatePct_fm__c</fullName>
    <formula>RefPolicyDetail__r.BrokerageRate__c</formula>
    <label>Brokerage Rate(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>