force-app/main/default/objects/SettlementLineItem__c/fields/Cedant__c.field-meta.xml
<CustomField>
    <fullName>Cedant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlement Line Items (Cedant)</relationshipLabel>
    <relationshipName>Settlement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>