force-app/main/default/objects/SettlementLineItem__c/fields/CedantClaimNo__c.field-meta.xml
<CustomField>
    <fullName>CedantClaimNo__c</fullName>
    <formula>RefClaim__r.CedantClaimNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cedant Claim No.</label>
    <type>Text</type>
</CustomField>