force-app/main/default/objects/SettlementLineItem__c/fields/CedantFacilityName__c.field-meta.xml
<CustomField>
    <fullName>CedantFacilityName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Placement의 Insured Group</description>
    <label>Cedant Facility Name</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>Settlement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>