force-app/main/default/objects/SettlementLineItem__c/fields/CedantRefNo__c.field-meta.xml
<CustomField>
    <fullName>CedantRefNo__c</fullName>
    <formula>RefReinsurance__r.PolicyNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cedant Ref No</label>
    <type>Text</type>
</CustomField>