force-app/main/default/objects/SettlementLineItem__c/fields/ClaimNoteNo_fm__c.field-meta.xml
<CustomField>
    <fullName>ClaimNoteNo_fm__c</fullName>
    <formula>IF(TEXT(ClosingOrign__c) = &apos;Claim&apos; , HYPERLINK(&apos;/&apos;+ Id, RefReinsuranceDetail__r.LKRefNo__c &amp; &apos;-&apos; &amp; &apos;C&apos; &amp; &apos;-&apos; &amp; RefClaimAllocation__r.ClaimSeq_fm__c &amp; &apos;-&apos; &amp; Text(ClaimNoteSeqNo__c) ) , &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Note No.</label>
    <type>Text</type>
</CustomField>