force-app/main/default/objects/SettlementLineItem__c/fields/ClaimNoteNoText_fm__c.field-meta.xml
<CustomField>
    <fullName>ClaimNoteNoText_fm__c</fullName>
    <formula>RefReinsuranceDetail__r.LKRefNo__c &amp; &apos;-&apos; &amp; &apos;C&apos; &amp; &apos;-&apos; &amp; RefClaimAllocation__r.ClaimSeq_fm__c &amp; &apos;-&apos; &amp; Text(ClaimNoteSeqNo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Note No.</label>
    <type>Text</type>
</CustomField>