force-app/main/default/objects/SettlementLineItem__c/fields/ClaimNoteSeqNo__c.field-meta.xml
<CustomField>
    <fullName>ClaimNoteSeqNo__c</fullName>
    <label>Claim Note Seq(No)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>