force-app/main/default/objects/SettlementLineItem__c/fields/ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate__c</fullName>
    <description>반제 일자
Closing Date(내부용)</description>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>