force-app/main/default/objects/SettlementLineItem__c/fields/ClosingExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ClosingExchangeRate__c</fullName>
    <label>Closing Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>