force-app/main/default/objects/SettlementLineItem__c/fields/COA__c.field-meta.xml
<CustomField>
    <fullName>COA__c</fullName>
    <formula>CASE(ClosingType__c
,&quot;P_R&quot; ,&quot;11003002&quot;
,&quot;P_FA&quot;,&quot;21001001&quot;
,&quot;P_FL&quot;,&quot;21001002&quot;
,&quot;P_B&quot;, &quot;41001002&quot;
,&quot;P_A&quot;, &quot;52001021&quot;
,&quot;C_FA&quot;,&quot;21001003&quot;
,&quot;C_FL&quot;,&quot;21001004&quot;
,NULL)</formula>
    <label>(X)COA</label>
    <type>Text</type>
</CustomField>