force-app/main/default/objects/SettlementLineItem__c/fields/COA_lk__c.field-meta.xml
<CustomField>
    <fullName>COA_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COA</label>
    <referenceTo>COA__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>Settlement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>