force-app/main/default/objects/SettlementLineItem__c/fields/COAName__c.field-meta.xml
<CustomField>
    <fullName>COAName__c</fullName>
    <label>(X)COA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>