force-app/main/default/objects/SettlementLineItem__c/fields/CoBrkgAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>CoBrkgAmountLocal__c</fullName>
    <label>(M)CoBrkg Amount(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>