force-app/main/default/objects/SettlementLineItem__c/fields/CoBrkgSharePct__c.field-meta.xml
<CustomField>
    <fullName>CoBrkgSharePct__c</fullName>
    <label>(M)CoBrkg Share(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>