force-app/main/default/objects/SettlementLineItem__c/fields/DateOfLoss__c.field-meta.xml
<CustomField>
    <fullName>DateOfLoss__c</fullName>
    <formula>RefClaim__r.LossDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Loss</label>
    <type>Text</type>
</CustomField>