force-app/main/default/objects/SettlementLineItem__c/fields/EvaluationDate__c.field-meta.xml
<CustomField>
    <fullName>EvaluationDate__c</fullName>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>