force-app/main/default/objects/SettlementLineItem__c/fields/EvaluationDate_fm__c.field-meta.xml
<CustomField>
    <fullName>EvaluationDate_fm__c</fullName>
    <formula>PeriodClose__r.EndDate__c</formula>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>