force-app/main/default/objects/SettlementLineItem__c/fields/EvaluationFXRate__c.field-meta.xml
<CustomField>
    <fullName>EvaluationFXRate__c</fullName>
    <label>Evaluation FX Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>