force-app/main/default/objects/SettlementLineItem__c/fields/ExchangeCurrency__c.field-meta.xml
<CustomField>
    <fullName>ExchangeCurrency__c</fullName>
    <label>Exchange Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>