force-app/main/default/objects/SettlementLineItem__c/fields/ExpPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>ExpPaymentDate__c</fullName>
    <description>회수 예정일</description>
    <label>Exp. Payment Date</label>
    <type>Date</type>
</CustomField>