force-app/main/default/objects/SettlementLineItem__c/fields/FacilityBDX_lk__c.field-meta.xml
<CustomField>
    <fullName>FacilityBDX_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility BDX</label>
    <referenceTo>COM_FacilityBDX__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>Settlement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>