force-app/main/default/objects/SettlementLineItem__c/fields/FacilityBDXPeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>FacilityBDXPeriodFrom__c</fullName>
    <label>Facility BDX Period From</label>
    <type>Date</type>
</CustomField>