force-app/main/default/objects/SettlementLineItem__c/fields/FacilityName__c.field-meta.xml
<CustomField>
    <fullName>FacilityName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Name</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Settlement Line Items (Facility Name)</relationshipLabel>
    <relationshipName>SettlementLineItemsAsFacilityName</relationshipName>
    <type>Lookup</type>
</CustomField>