force-app/main/default/objects/SettlementLineItem__c/fields/FundsTransfer__c.field-meta.xml
<CustomField>
    <fullName>FundsTransfer__c</fullName>
    <label>Funds Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Non-Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>