force-app/main/default/objects/SettlementLineItem__c/fields/FXRateOrigintoSettlement__c.field-meta.xml
<CustomField>
    <fullName>FXRateOrigintoSettlement__c</fullName>
    <label>FX Rate(From Origin to Settlement)</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>