force-app/main/default/objects/SettlementLineItem__c/fields/FXRateSettlementAccounting__c.field-meta.xml
<CustomField>
    <fullName>FXRateSettlementAccounting__c</fullName>
    <label>FX Rate(Settlement to Accounting)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>