force-app/main/default/objects/SettlementLineItem__c/fields/GLAccountName__c.field-meta.xml
<CustomField>
    <fullName>GLAccountName__c</fullName>
    <formula>CASE(ClosingType__c
,&quot;P_R&quot; ,&quot;Brokerage Recievable&quot;
,&quot;P_FA&quot;,&quot;Fiduciary Assets-Premium&quot;
,&quot;P_FL&quot;,&quot;Fiduciary Liability-Premium&quot;
,&quot;P_B&quot; ,&quot;Facultative Brokerage and commissions - Offshore&quot;
,&quot;P_A&quot; ,&quot;Admin Fee-Co-Broking&quot;
,&quot;C_FA&quot;,&quot;Fiduciary Assets-Claim&quot;
,&quot;C_FL&quot;,&quot;Fiduciary Liability-Claim&quot;
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(X)GL Account Name</label>
    <type>Text</type>
</CustomField>