force-app/main/default/objects/SettlementLineItem__c/fields/InceptionDate__c.field-meta.xml
<CustomField>
    <fullName>InceptionDate__c</fullName>
    <description>개시일</description>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>