force-app/main/default/objects/SettlementLineItem__c/fields/InstallmentNo__c.field-meta.xml
<CustomField>
    <fullName>InstallmentNo__c</fullName>
    <label>No of Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>