force-app/main/default/objects/SettlementLineItem__c/fields/InstallPct__c.field-meta.xml
<CustomField>
    <fullName>InstallPct__c</fullName>
    <formula>RefReinsuranceDetail__r.InstallPct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>