force-app/main/default/objects/SettlementLineItem__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlement Line Items (Insured)</relationshipLabel>
    <relationshipName>Settlement_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>