force-app/main/default/objects/SettlementLineItem__c/fields/Insured_fm__c.field-meta.xml
<CustomField>
    <fullName>Insured_fm__c</fullName>
    <formula>RefReinsurance__r.LKInsured__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LK Insured</label>
    <type>Text</type>
</CustomField>