force-app/main/default/objects/SettlementLineItem__c/fields/IsSetOff__c.field-meta.xml
<CustomField>
    <fullName>IsSetOff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>상계여부</description>
    <label>(M)Is Set Off</label>
    <type>Checkbox</type>
</CustomField>