force-app/main/default/objects/SettlementLineItem__c/fields/KRWAmountARAP__c.field-meta.xml
<CustomField>
    <fullName>KRWAmountARAP__c</fullName>
    <label>(M)KRW Amount(AR/AP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>