force-app/main/default/objects/SettlementLineItem__c/fields/KRWAmountCoBrkg__c.field-meta.xml
<CustomField>
    <fullName>KRWAmountCoBrkg__c</fullName>
    <label>(M)KRW Amount(CoBrkg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>