force-app/main/default/objects/SettlementLineItem__c/fields/KRWAmountPremium__c.field-meta.xml
<CustomField>
    <fullName>KRWAmountPremium__c</fullName>
    <label>(M)KRW Amount(Premium)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>