force-app/main/default/objects/SettlementLineItem__c/fields/KRWAmountSales__c.field-meta.xml
<CustomField>
    <fullName>KRWAmountSales__c</fullName>
    <label>(M)KRW Amount(Sales)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>