force-app/main/default/objects/SettlementLineItem__c/fields/Layer__c.field-meta.xml
<CustomField>
    <fullName>Layer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Layer</label>
    <referenceTo>OPP_Layer__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>Settlement_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>