force-app/main/default/objects/SettlementLineItem__c/fields/LKRefNoPolicy_fm__c.field-meta.xml
<CustomField>
    <fullName>LKRefNoPolicy_fm__c</fullName>
    <formula>RefInsurancePolicy__r.LKRefNo_fm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LK Ref No.(Policy)</label>
    <type>Text</type>
</CustomField>