force-app/main/default/objects/SettlementLineItem__c/fields/LKRefNoReins_fm__c.field-meta.xml
<CustomField>
    <fullName>LKRefNoReins_fm__c</fullName>
    <formula>RefReinsuranceDetail__r.LKRefNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LK Ref No.(Reinsurance)</label>
    <type>Text</type>
</CustomField>