force-app/main/default/objects/SettlementLineItem__c/fields/LOB3__c.field-meta.xml
<CustomField>
    <fullName>LOB3__c</fullName>
    <label>LOB3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_LOB3</valueSetName>
    </valueSet>
</CustomField>