force-app/main/default/objects/SettlementLineItem__c/fields/LocationOfLoss__c.field-meta.xml
<CustomField>
    <fullName>LocationOfLoss__c</fullName>
    <formula>RefClaim__r.LossLocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location of Loss</label>
    <type>Text</type>
</CustomField>