force-app/main/default/objects/SettlementLineItem__c/fields/MarketFacilityName__c.field-meta.xml
<CustomField>
    <fullName>MarketFacilityName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Facility Name</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Settlement Line Items (Market Facility Name)</relationshipLabel>
    <relationshipName>Settlement_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>