force-app/main/default/objects/SettlementLineItem__c/fields/MarketNo__c.field-meta.xml
<CustomField>
    <fullName>MarketNo__c</fullName>
    <label>Market No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>