force-app/main/default/objects/SettlementLineItem__c/fields/MarketType__c.field-meta.xml
<CustomField>
    <fullName>MarketType__c</fullName>
    <formula>Text(RefReinsuranceDetail__r.MarketType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Type</label>
    <type>Text</type>
</CustomField>