force-app/main/default/objects/SettlementLineItem__c/fields/OffsetCheck__c.field-meta.xml
<CustomField>
    <fullName>OffsetCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offset Check</label>
    <type>Checkbox</type>
</CustomField>