force-app/main/default/objects/SettlementLineItem__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Order</label>
    <type>AutoNumber</type>
</CustomField>