force-app/main/default/objects/SettlementLineItem__c/fields/OriginBankTransaction__c.field-meta.xml
<CustomField>
    <fullName>OriginBankTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Bank Transaction</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItemsAsOrigin</relationshipName>
    <type>Lookup</type>
</CustomField>