force-app/main/default/objects/SettlementLineItem__c/fields/OriginReconciliationNo__c.field-meta.xml
<CustomField>
    <fullName>OriginReconciliationNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Reconciliation No.</label>
    <referenceTo>Reconciliation__c</referenceTo>
    <relationshipLabel>Settlement Line Items (Origin Reconciliation No.)</relationshipLabel>
    <relationshipName>SettlementLineItemsAsOrigin</relationshipName>
    <type>Lookup</type>
</CustomField>