force-app/main/default/objects/SettlementLineItem__c/fields/OriginSettlementLineItem__c.field-meta.xml
<CustomField>
    <fullName>OriginSettlementLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Settlement Line Item</label>
    <referenceTo>SettlementLineItem__c</referenceTo>
    <relationshipLabel>Settlement Line Items (Origin Settlement Line Item)</relationshipLabel>
    <relationshipName>SettlementLineItemsAsOrigin</relationshipName>
    <type>Lookup</type>
</CustomField>