force-app/main/default/objects/SettlementLineItem__c/fields/OutwardFunds_lk__c.field-meta.xml
<CustomField>
    <fullName>OutwardFunds_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outward Funds</label>
    <referenceTo>OutwardFund__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>