force-app/main/default/objects/SettlementLineItem__c/fields/ParentClaimNo__c.field-meta.xml
<CustomField>
    <fullName>ParentClaimNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Claim No.</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Settlement Line Items (Parent Claim No.)</relationshipLabel>
    <relationshipName>Settlement_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>