force-app/main/default/objects/SettlementLineItem__c/fields/PeriodClose__c.field-meta.xml
<CustomField>
    <fullName>PeriodClose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>마감월</description>
    <label>Period Close</label>
    <referenceTo>PeriodClose__c</referenceTo>
    <relationshipLabel>Settlement Line Items</relationshipLabel>
    <relationshipName>SettlementLineItems_PeriodClose</relationshipName>
    <type>Lookup</type>
</CustomField>