force-app/main/default/objects/SettlementLineItem__c/fields/PPWDate_fm__c.field-meta.xml
<CustomField>
    <fullName>PPWDate_fm__c</fullName>
    <formula>RefReinsuranceDetail__r.PPWDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPW Date (formula)</label>
    <type>Date</type>
</CustomField>