force-app/main/default/objects/SettlementLineItem__c/fields/PPWType_fm__c.field-meta.xml
<CustomField>
    <fullName>PPWType_fm__c</fullName>
    <formula>TEXT(RefReinsuranceDetail__r.PPWType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPW Type</label>
    <type>Text</type>
</CustomField>